--- a/task/templates/tasks/cadastro.html
+++ b/task/templates/tasks/cadastro.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+   
     <div class="page">
-        <form method="post" class="formLogin" action="{% url 'cadastrar_usuario' %}">
+        <form method="post" class="formLogin" action="{% url 'adicionar_usuario' %}">
             {% csrf_token %}
             <h1>Cadastro</h1>
             <p>Digite os seus dados de acesso no campo abaixo.</p>
@@ -19,16 +20,19 @@
 
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" placeholder="Digite seu e-mail" />
+            <p class= "campos_escondidos" id="email_existente">*e-mail já existe </p>
 
             <label for="senha">Senha</label>
-            <input type="password" id="senha" name="senha" placeholder="Digite sua senha" />
+            <input type="password" id="password" name="password" placeholder="Digite sua senha" />
 
             <label for="confirmar_senha">Confirme a Senha</label>
             <input type="password" id="confirmar_senha" name="confirmar_senha" placeholder="Confirme sua senha" />
-            
+            <p class= "campos_escondidos" id="senha_errada">*Senhas não coincidem</p>
+            <p class="campos_escondidos" id="campo_nulo">*campo obrigatorio</p>
+
             <input type="submit" value="Cadastrar" class="btn" />
         </form>
-
+        
         <!-- Exibir mensagens -->
         {% if messages %}
         <ul class="messages">
