--- a/task/static/css/style1.css
+++ b/task/static/css/style1.css
@@ -57,8 +57,16 @@ header {
 #titulo-header {
     color: var(--branco);
 }
+/*Main*/
 
-
+.linha-horizontal {
+    width: 100%;
+    /* Largura da linha */
+    border-top: 4px solid #23238E;
+    /* Adiciona borda superior na div com a cor desejada */
+    box-shadow: 0 4px 6px rgba(35, 35, 142, 0.3);
+    /* Adiciona sombra com a cor desejada */
+}
 /*FOOTER*/
 
 footer {
