--- a/task/static/css/style5.css
+++ b/task/static/css/style5.css
@@ -14,7 +14,7 @@ body {
     align-content: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #0D5078;
 }
 
@@ -25,7 +25,6 @@ body {
     border-radius: 7px;
     padding: 40px;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-    width: 40%;
     gap: 5px
 }
 
@@ -60,7 +59,7 @@ body {
 
 
 .formLogin input:focus {
-    border: 1px solid#0690df88; 
+    border: 1px solid#0690df88;
 }
 
 .formLogin label {
@@ -79,11 +78,8 @@ body {
 .formLogin a:hover {
     color: #0568a1;
 }
-.campos_escondidos{
-    color:red;
-    display: none;
-    opacity: 0;
-}
+
+
 .btn {
     background-color: #0f71aae5;
     color: #fff;
