--- a/task/templates/tasks/index.html
+++ b/task/templates/tasks/index.html
@@ -6,21 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href ="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style5.css' %}">
 </head>
 <body>
     <div class="page">
-        <form method="POST" class="formLogin">
+        <form method="POST" class="formLogin" action="{% url 'logar' %}">
+            {% csrf_token %}
             <h1>Login</h1>
             <p>Digite os seus dados de acesso no campo abaixo.</p>
+        
+            
             <label for="email">E-mail</label>
-            <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
+            <input type="email" name="email" placeholder="Digite seu e-mail" required autofocus="true" />
+            
             <label for="password">Senha</label>
-            <input type="password" placeholder="password" />
-            <a href='{% url "cadastro_usuario" %}'>cadastrar</a>
+            <input type="password" name="password" placeholder="Digite sua senha"/>
+            
+            <a href='{% url "cadastro_usuario" %}'>Cadastrar</a>
             <input type="submit" value="Acessar" class="btn" />
         </form>
     </div>
-    
 </body>
 </html>
