--- a/task/templates/tasks/processos.html
+++ b/task/templates/tasks/processos.html
@@ -34,32 +34,35 @@
             -->
           </ul> 
       </nav>
-  
+    
 </header>
-<p></p>
-<p></p>
 
-<p></p>
+<main>
+    <h1>Processos</h1>
+    <label for="titulo">Número do Processo</label>
+    <input type="text" name="numeroprocesso" placeholder="" required autofocus="true" />
 
-<p>.</p>
+    <label for="autor">Autor</label>
+    <input type="text" name="autor" placeholder="" required autofocus="true" />
 
-<p>.</p>
+    <label for="reu">Réu</label>
+    <input type="text" name="reu" placeholder="" required autofocus="true" />
 
-<p></p>
+    <label for="instancia">Instância</label>
+    <input type="text" name="instancia" placeholder="" required autofocus="true" />
 
-<p></p>
+    <label for="forum">Fórum</label>
+    <input type="text" name="forum" placeholder="" required autofocus="true" />
 
-<p></p>
-<p></p>
+    <label for="valordacausa">Valor da Causa</label>
+    <input type="text" name="valordacausa" placeholder="" required autofocus="true" />
 
-<p></p>
-
-<p></p>
-<p></p>
-
-<p></p>
-<p></p>
-<p></p>
+    <label for="assunto">Assunto</label>
+    <input type="text" name="assunto" placeholder="" required autofocus="true" />
+    <input type="submit" value="Enviar" class="btn" />
+    <h2>Andamentos Processuais</h2>   
+  
+</main>
 
 <footer>
     <div class="container">
