--- a/task/static/css/style1.css
+++ b/task/static/css/style1.css
@@ -65,6 +65,7 @@ header {
     border-top: 4px solid #23238E;
     /* Adiciona borda superior na div com a cor desejada */
     box-shadow: 0 4px 6px rgba(35, 35, 142, 0.3);
+    padding-top: 20px;
     /* Adiciona sombra com a cor desejada */
 }
 /*FOOTER*/
