--- a/task/templates/base.html
+++ b/task/templates/base.html
@@ -1,44 +1,57 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block  title%}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href ="{% static 'css/style1.css' %}">
 </head>
 <body>
+    
+<header>
+  <img src="{% static 'img/advogado.png' %}" alt="símbolo de Advogados"> </img>     
+  <h1 id="titulo-header">Mateus e Malta Advogados</h1>
+      <nav class="menu-item">
+          <ul class="nav-item">
+              <li class="item-header">
+                  <a href="#">Home</a>
+              </li>
+              <li class="item-header">
+                  <a href="tasks/cliente.html">Cadastro</a>
+              </li>
+              <li class="item-header">
+                 <a href="tasks/tarefas.html">Tarefas</a>
+              </li>
+              <li class="item-header">
+                  <a href="tasks/processos.html">Processos</a>
+              </li>
+              <!--
+              <li class="item-header">
+                <a href="#"><img src="{% static 'img/usuario.png' %}" alt="login"> </img>     </a>
+              </li>
+            -->
+          </ul> 
+      </nav>
+    
+</header>
+{% block content %}
+
+
+{% endblock %}
+<footer>
     <div class="container">
-        <p> Barra de Navegação</p>
-        {% block content %}
-        {% endblock %}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+    <!--ul1-->
+  
+  
+        <p id="ultima-linha">feito por Luana Karoline e Rafaela Urtiga corporation 2024</p>
+    </nav>
     </div>
-  </div>
-</nav>
-    </div>
-    <footer> </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+</footer>
+
+        
+</div>
+<footer> </footer>
 </body>
 </html>
