--- a/task/templates/tasks/tarefas.html
+++ b/task/templates/tasks/tarefas.html
@@ -1,86 +1,70 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href ="{% static 'css/style1.css' %}">
-</head>
-<body>
-    
+ {%extends 'base.html' %}
+
+{% block title %}Tarefas{% endblock %}
 {% block content %}
-<header>
-  <img src="{% static 'img/advogado.png' %}" alt="símbolo de Advogados"> </img>     
-  <h1 id="titulo-header">Mateus e Malta Advogados</h1>
-      <nav class="menu-item">
-          <ul class="nav-item">
-              <li class="item-header">
-                  <a href="#">Home</a>
-              </li>
-              <li class="item-header">
-                  <a href="tasks/cliente.html">Cadastro</a>
-              </li>
-              <li class="item-header">
-                 <a href="tasks/tarefas.html">Tarefas</a>
-              </li>
-              <li class="item-header">
-                  <a href="tasks/processos.html">Processos</a>
-              </li>
-              <!--
-              <li class="item-header">
-                <a href="#"><img src="{% static 'img/usuario.png' %}" alt="login"> </img>     </a>
-              </li>
-            -->
-          </ul> 
-      </nav>
-    
-</header>
+
 
 <main>
+    <article>
     <h1>Tarefas</h1>
-    <label for="titulo">Título da Tarefa</label>
-    <input type="text" name="titulo" placeholder="Título da Tarefa" required autofocus="true" />
+    <div class="linha-horizontal"></div>
+    <form method="post" class="formTarefa">
+        {% csrf_token %}
 
-    <label for="responsavel">Responsável</label>
-    <input type="text" name="responsavel" placeholder="" required autofocus="true" />
+        <div class="row">
+                <div class="col">
+                    <label for="titulo">Título da Tarefa</label>
+                    <input type="text" class="form-control" name="titulo" />  
+                </div>
+                <div class="col">
+                   <label for="responsavel">Responsável</label>
+                   <input type="text" class="form-control" name="responsavel"/>
 
-    <label for="situacao">Situação</label>
-    <input type="text" name="situacao" placeholder="" required autofocus="true" />
+                </div>
+                <div class="col">
+                    
+                    <label for="situacao">Situação</label>
+                    <input type="text" class="form-control" name="situacao" />
+                </div>
+        </div>
+        <div class="row">
+                <div class="col">
+               <label for="database">Data Base</label>
+               <input type="date" class="form-control" name="database"  />
+                </div>
+                <div class="col">
+                   <label for="datainicio">Data Inicio</label>
+                   <input type="date" class="form-control" name="datainicio" />
 
-    <label for="database">Data Base</label>
-    <input type="date" name="database" placeholder="" required autofocus="true" />
+                </div>
+                <div class="col">              
+                    <label for="datafatal">Data Fatal</label>
+                    <input type="date" class="form-control" name="datafatal" />
 
-    <label for="datainicio">Data Inicio</label>
-    <input type="date" name="datainicio" placeholder="" required autofocus="true" />
+                </div>
+        </div>
+         <div class="row">
+                <div class="col">
+                
+                    <label for="name">Cliente</label>
+                    <input type="text"  class="form-control" name="cliente" />
+                </div>
+                <div class="col">
+                    <label for="name">Número Processo</label>
+                    <input type="text"  class="form-control" name="numero_processo" />  
 
-    <label for="datafatal">Data Fatal</label>
-    <input type="date" name="datafatal" placeholder="" required autofocus="true" />
+                </div>
+               
+        </div>
+        <div class="form-group">
+    <label for="exampleFormControlTextarea1">Descrição da Tarefa</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name ="descricao_tarefa"></textarea>
+  </div>
+       <p>+</p>
+        <button type="submit" class="btn btn-primary">Enviar</button>
 
-    <label for="name">Cliente</label>
-    <input type="text" name="cliente" placeholder="" required autofocus="true" />
-
-    <label for="name"></label>
-    <input type="text" name="descricaotarefa" placeholder="Descrição da Tarefa" required autofocus="true" />
-    
-    <button>+</button>
-    <input type="submit" value="Enviar" class="btn" />
-
+    </form>    
+<article>
 </main>
-
-<footer>
-    <div class="container">
-    <!--ul1-->
-  
-  
-        <p id="ultima-linha">feito por Luana Karoline e Rafaela Urtiga corporation 2024</p>
-    </nav>
-    </div>
-
-</footer>
 {% endblock %}
-        
-</div>
-<footer> </footer>
-</body>
-</html>
+
