--- a/task/templates/tasks/cliente.html
+++ b/task/templates/tasks/cliente.html
@@ -1,108 +1,87 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href ="{% static 'css/style1.css' %}">
-</head>
-<body>
-    
+{% extends 'base.html' %}
+
+{% block title %}Cadastro{% endblock %}
 {% block content %}
-<header>
-  <img src="{% static 'img/advogado.png' %}" alt="símbolo de Advogados">   
-  <h1 id="titulo-header">Mateus e Malta Advogados</h1>
-      <nav class="menu-item">
-          <ul class="nav-item">
-              <li class="item-header">
-                  <a href="#">Home</a>
-              </li>
-              <li class="item-header">
-                  <a href="tasks/cliente.html">Cadastro</a>
-              </li>
-              <li class="item-header">
-                 <a href="tasks/tarefas.html">Tarefas</a>
-              </li>
-              <li class="item-header">
-                  <a href="tasks/processos.html">Processos</a>
-              </li>
-              <!--
-              <li class="item-header">
-                <a href="#"><img src="{% static 'img/usuario.png' %}" alt="login"> </img>     </a>
-              </li>
-            -->
-          </ul> 
-      </nav>
-    
-</header>
 
 <main>
+    <article>
     <h1>Dados do Cliente</h1>
     <div class="linha-horizontal"></div>
 
     <form method="post" class="formLogin" action="{% url 'cadastrar_cliente' %}">
-        {% csrf_token %}
+        {% csrf_token %} 
+        <div class="row">
+             <div class="col">
+                 <label for="nome">Nome:</label>
+                 <input type="text" name="nome" class="form-control"  />
+             </div>
+        </div>
 
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" placeholder="" required autofocus="true" />
+        <div class="row">
+            <div class="col">
+                <label for="cpf">CPF:</label>
+                <input type="text" name="cpf"class="form-control"   />
+            </div>
+            <div class="col">
+                <label for="rg">RG:</label>
+                <input type="text" name="rg" class="form-control" />
+            </div>
+            <div class="col">
+                <label for="data_nascimento">Data de Nascimento: </label>
+                <input type="date" name="data_nascimento" class="form-control"  />
+            </div>    
+        </div>
 
-        <label for="cpf">CPF:</label>
-        <input type="text" name="cpf" placeholder="" required autofocus="true" />
+        <div class="row">
+            <div class="col">
+                
+                <label for="genero">Gênero:</label>
+                <input type="text" name="genero" class="form-control"/>
+            </div>    
+            <div class="col">
+                <label for="contato">Contato:</label>
+                <input type="text" name="contato" class="form-control" />
 
-        <label for="rg">RG:</label>
-        <input type="text" name="rg" placeholder="" required autofocus="true" />
-
-        <label for="data_nascimento">Data de Nascimento: </label>
-        <input type="date" name="data_nascimento" placeholder="" required autofocus="true" />
-
-        <label for="contato">Contato:</label>
-        <input type="text" name="contato" placeholder="" required autofocus="true" />
-
-        <label for="email">E-mail:</label>
-        <input type="email" name="email" placeholder="" required autofocus="true" />
-
-        <label for="genero">Gênero:</label>
-        <input type="text" name="genero" placeholder="" required autofocus="true" />
-   
-        <label for="whatsapp">Whatsapp:</label>
-        <input type="text" name="whatsapp" placeholder="" required autofocus="true" />
-
+            </div>    
+            <div class="col">
+                <label for="whatsapp">Whatsapp:</label>
+                <input type="text" class="form-control"  name="whatsapp"/>
+            </div>  
+        </div>
+        <div class="row">
+            <div class="col">
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" class="form-control" />
+            </div>  
+        </div>
         <h2>Endereço do Cliente</h2>
         <div class="linha-horizontal"></div>
+           <div class="row">
+                <div class="col">
+                    <label for="cep">CEP:</label>
+                    <input type="text" name="cep"  class="form-control" />
+
+                </div>  
+                <div class="col">
+                    <label for="logradouro">Logradouro:</label>
+                    <input type="text" name="logradouro" class="form-control" />
         
-        <label for="cep">CEP:</label>
-        <input type="text" name="cep" placeholder="" required autofocus="true" />
+                </div>  
+                <div class="col">
+                <label for="numero">N:</label>
+                <input type="number" name="numero_casa" class="form-control" />  
+                </div>  
+                <div class="col">
+                    <label for="bairro">Bairro:</label>
+                    <input type="bairro" name="bairro"  class="form-control"  />
 
-        <label for="logradouro">Logradouro:</label>
-        <input type="text" name="logradouro" placeholder="" required autofocus="true" />
-    
-        <label for="numero">N:</label>
-        <input type="number" name="numero_casa" placeholder="" required autofocus="true" />
+                </div>  
+        </div>
+       
 
-        <label for="bairro">Bairro:</label>
-        <input type="bairro" name="bairro" placeholder="" required autofocus="true" />
-
-        
-
-
-        <input type="submit" value="Enviar" class="btn" />
+        <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
+</article>  
 </main>
 
-<footer>
-    <div class="container">
-    <!--ul1-->
-  
-  
-        <p id="ultima-linha">feito por Luana Karoline e Rafaela Urtiga corporation 2024</p>
-    </nav>
-    </div>
-
-</footer>
 {% endblock %}
-        
-</div>
-<footer> </footer>
-</body>
-</html>
