--- a/task/templates/tasks/cadastro.html
+++ b/task/templates/tasks/cadastro.html
@@ -11,7 +11,7 @@
 <body>
    
     <div class="page">
-        <form method="post" class="formLogin" action="{% url 'adicionar/usuario' %}">
+        <form method="post" class="formLogin" action="{% url 'adicionar_usuario' %}">
             {% csrf_token %}
             <h1>Cadastro</h1>
             <p>Digite os seus dados de acesso no campo abaixo.</p>
