atualização das models

--- a/task/templates/tasks/index.html
+++ b/task/templates/tasks/index.html
@@ -22,7 +22,7 @@
             <label for="password">Senha</label>
             <input type="password" name="password" placeholder="Digite sua senha"/>
             
-            <a href='{% url "cadastrar_usuario" %}'>Cadastrar</a>
+            <a href='{% url "adicionar_usuario" %}'>Cadastrar</a>
             <input type="submit" value="Acessar" class="btn" />
         </form>
     </div>
