--- a/task/templates/tasks/processos.html
+++ b/task/templates/tasks/processos.html
@@ -50,9 +50,10 @@
                         <input type="text" class="form-control" name="assunto"  />
                     </div>
                     <div class="col">
-
-                        <label for="cliente-cpf">Cliente(CPF):</label>
-                        <input type="text" class="form-control" name="cpf"/>
+                        <label for="campo_select">Cliente</label>
+                        <select class="form-control" name="campo_select" id="campo_select">
+                            <!-- Aqui vão as opções do select -->
+                        </select>
                     </div>
              </div>
                
