--- a/task/templates/tasks/tarefas.html
+++ b/task/templates/tasks/tarefas.html
@@ -44,17 +44,18 @@
                 </div>
         </div>
          <div class="row">
-                <div class="col">
-                
-                    <label for="name">Cliente</label>
-                    <input type="text"  class="form-control" name="cliente" />
-                </div>
-                <div class="col">
-                    <label for="name">Número Processo</label>
-                    <input type="text"  class="form-control" name="numero_processo" />  
-
-                </div>
-               
+            <div class="col">
+                <label for="campo_select">Cliente</label>
+                <select class="form-control" name="campo_select" id="campo_select">
+                    <!-- Aqui vão as opções do select -->
+                </select>
+            </div>
+            <div class="col">
+                <label for="campo_select">Número Processo</label>
+                <select class="form-control" name="campo_select" id="campo_select">
+                    <!-- Aqui vão as opções do select -->
+                </select>
+            </div>
         </div>
         <div class="form-group">
     <label for="exampleFormControlTextarea1">Descrição da Tarefa</label>
