--- a/task/templates/base.html
+++ b/task/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     
 <header>
-  <img src="{% static 'img/advogado.png' %}" alt="símbolo de Advogados"> </img>     
+  <img src="{% static 'img/advogado.png' %}" alt="símbolo de Advogados">    
   <h1 id="titulo-header">Mateus e Malta Advogados</h1>
       <nav class="menu-item">
           <ul class="nav-item">
