--- a/task/static/css/stylecadastro.css
+++ b/task/static/css/stylecadastro.css
@@ -4,17 +4,16 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
-    color: #023047
+    color: #023047;
 }
 
 .page {
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-color: #0D5078;
 }
 
@@ -25,70 +24,44 @@ body {
     border-radius: 7px;
     padding: 40px;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-    width: 40%;
-    gap: 5px
-}
-
-.areaLogin img {
-    width: 420px;
+    width: 80%;
+    max-width: 500px;
+    gap: 20px;
 }
 
 .formLogin h1 {
-    padding: 0;
-    margin: 0;
+    margin: 0 0 20px;
     font-weight: 500;
     font-size: 2.3em;
 }
 
 .formLogin p {
-    display: inline-block;
     font-size: 14px;
     color: #666;
-    margin-bottom: 25px;
-}
-
-.formLogin input {
-    padding: 15px;
-    font-size: 14px;
-    border: 1px solid #ccc;
     margin-bottom: 20px;
-    margin-top: 5px;
-    border-radius: 4px;
-    transition: all linear 160ms;
-    outline: none;
 }
 
-
-.formLogin input:focus {
-    border: 1px solid#0690df88; 
-}
-
+.formLogin input,
 .formLogin label {
-    font-size: 14px;
-    font-weight: 600;
+    width: 100%;
 }
-#messages {
-    font-size: 10px;
-    color: #666;
-}
+
 .formLogin a {
-    display: inline-block;
-    margin-bottom: 20px;
     font-size: 13px;
     color: #555;
-    transition: all linear 160ms;
 }
 
-.formLogin a:hover {
-    color: #0568a1;
+.formLogin input[type="submit"] {
+    margin-top: 20px;
 }
-.campos_escondidos{
-    color:red;
-    display: none;
-    opacity: 0;
+
+@media only screen and (max-width: 768px) {
+    .formLogin {
+        width: 90%;
+    }
 }
 .btn {
-    background-color: #0f71aae5;
+    background-color: var(--cor-botao);
     color: #fff;
     font-size: 14px;
     font-weight: 600;
@@ -96,11 +69,15 @@ body {
     transition: all linear 160ms;
     cursor: pointer;
     margin: 0 !important;
-
+    padding: 10px 20px;
+    /* Adicionando espaçamento interno para aumentar a área de clique */
+    border-radius: 5px;
+    /* Adicionando bordas arredondadas */
+    height: 40px;
+    /* Ajuste a altura conforme necessário */
 }
 
 .btn:hover {
     transform: scale(1.05);
-    background-color: rgba(6, 144, 223, 0.733)e5;
-
+    background-color: var(--cor-botao-hover);
 }
