--- a/task/templates/tasks/cliente.html
+++ b/task/templates/tasks/cliente.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Cadastro{% endblock %}
 {% block content %}
 
@@ -12,22 +12,22 @@
         {% csrf_token %} 
         <div class="row">
              <div class="col">
-                 <label for="nome">Nome:</label>
+                 <label for="nome">Nome*:</label>
                  <input type="text" name="nome" class="form-control"  />
              </div>
         </div>
 
         <div class="row">
             <div class="col">
-                <label for="cpf">CPF:</label>
+                <label for="cpf">CPF*:</label>
                 <input type="text" name="cpf"class="form-control"   />
             </div>
             <div class="col">
-                <label for="rg">RG:</label>
+                <label for="rg">RG*:</label>
                 <input type="text" name="rg" class="form-control" />
             </div>
             <div class="col">
-                <label for="data_nascimento">Data de Nascimento: </label>
+                <label for="data_nascimento">Data de Nascimento*: </label>
                 <input type="date" name="data_nascimento" class="form-control"  />
             </div>    
         </div>
@@ -35,11 +35,11 @@
         <div class="row">
             <div class="col">
                 
-                <label for="genero">Gênero:</label>
+                <label for="genero">Gênero*:</label>
                 <input type="text" name="genero" class="form-control"/>
             </div>    
             <div class="col">
-                <label for="contato">Contato:</label>
+                <label for="contato">Contato*:</label>
                 <input type="text" name="contato" class="form-control" />
 
             </div>    
@@ -58,21 +58,21 @@
         <div class="linha-horizontal"></div>
            <div class="row">
                 <div class="col">
-                    <label for="cep">CEP:</label>
+                    <label for="cep">CEP*:</label>
                     <input type="text" name="cep"  class="form-control" />
 
                 </div>  
                 <div class="col">
-                    <label for="logradouro">Logradouro:</label>
+                    <label for="logradouro">Logradouro*:</label>
                     <input type="text" name="logradouro" class="form-control" />
         
                 </div>  
                 <div class="col">
-                <label for="numero">N:</label>
+                <label for="numero">Número*:</label>
                 <input type="number" name="numero_casa" class="form-control" />  
                 </div>  
                 <div class="col">
-                    <label for="bairro">Bairro:</label>
+                    <label for="bairro">Bairro*:</label>
                     <input type="bairro" name="bairro"  class="form-control"  />
 
                 </div>  
@@ -90,18 +90,59 @@
                     <input type="text" name="serie"  class="form-control" />
                 </div>
                  <div class="col">
-                    <label for="numero">N:</label>
+                    <label for="numero">Número:</label>
                     <input type="text" name="numero"  class="form-control" />
                 </div>
                 <div class="col">
-                    <label for="uf">UF:</label>
+                    <label for="uf">UF*:</label>
                     <input type="text" name="uf"  class="form-control" />
                 </div>
             </div>    
-
+        <p>*Campo Obrigatório</p>  
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 </article>  
+ <article>
+        <h1>Lista de Clientes</h1>
+        <div class="linha-horizontal"></div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>RG</th>
+                    <th>CPF</th>
+                    <th>Data de Nascimento</th>
+                    <th>Contato</th>
+                    <th>Email</th>
+                    <th>Gênero</th>
+                    <th>CEP</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cliente in clientes %}
+                <tr>
+                    <td>{{ cliente.nome }}</td>
+                    <td>{{ cliente.cpf }}</td>
+                    <td>{{ cliente.rg }}</td>
+                    <td>{{ cliente.data_nascimento }}</td>
+                    <td>{{ cliente.contato }}</td>
+                    <td>{{ cliente.email }}</td>
+                    <td>{{ cliente.genero }}</td>
+                    <td>{{ cliente.cep }}</td>
+                    <td>
+                        <a href="{% url 'editar_cliente' cliente.id %}"> 
+                            <img src="{% static 'img/iconeeditar.png' %}" alt="símbolo de editar"></img> 
+                        </a>                      
+                        <a href="{% url 'excluir_cliente' cliente.id %}">
+                             <img src="{% static 'img/excluir.png' %}" alt="símbolo de excluir"></img> 
+                        </a>    
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </article> 
 </main>
 
 {% endblock %}
