editar e excluir adicionados

--- a/task/templates/base.html
+++ b/task/templates/base.html
@@ -26,10 +26,10 @@
                   <a href="tasks/cliente.html">Cadastro</a>
               </li>
               <li class="item-header">
-                 <a href="tasks/tarefas.html">Tarefas</a>
+                 <a href="tasks/tarefa.html">Tarefa</a>
               </li>
               <li class="item-header">
-                  <a href="tasks/processos.html">Processos</a>
+                  <a href="tasks/processo.html">Processo</a>
               </li>
               <!--
               <li class="item-header">
